<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/text_id_mhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        />

    <EditText
        android:id="@+id/editText_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_id_mhs"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:ems="10">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_jrsn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_nama"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:ems="10" />

    <EditText
        android:id="@+id/editText_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_jrsn"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:ems="10"
        android:inputType="number" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/editText_nim"
        >
        <Button
            android:id="@+id/button_save_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_edit"
            />

        <Button
            android:id="@+id/button_cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_cancel"
            />
    </LinearLayout>
</RelativeLayout>